@@ -42,8 +42,10 @@ public class SafeMemoryWriter extends DataOutputBuffer
         return memory;
     }
 
-    protected void reallocate(long newCapacity)
+    @Override
+    protected void reallocate(long count)
     {
+        long newCapacity = calculateNewSize(count);
         if (newCapacity != capacity())
         {
             long position = length();
@@ -91,6 +93,12 @@ public class SafeMemoryWriter extends DataOutputBuffer
     {
         super.order(order);
         return this;
+    }
+
+    @Override
+    public long validateReallocation(long newSize)
+    {
+        return newSize;
     }
 
     private static long tailOffset(Memory memory)
